--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  
-
-
+  <div class="wrapper">
+    <div class="flexWrap">
+      <h1>COOKIE'S RANDOM SIMULATOR</h1>
+      <p id="prayer">"Dear Gaben, please bless my randoms. I trust in thee and accept my fate as you determine!"</p>
+      <button id="randomHeroBtn">Amen</button>
+      <h2 id="heroText"></h2>
+    </div>
+  </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="app.js"></script>
