added flavor text

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <p id="prayer">"Dear Gaben, please bless my randoms. I trust in thee and accept my fate as you determine!"</p>
       <button id="randomHeroBtn">Amen</button>
       <h2 id="heroText"></h2>
+      <h3 id="flavorText"></h3>
     </div>
   </div>
 </body>
