--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Cookie's Prayer Simulator</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
       <p id="prayer">"Dear Gaben, please bless my randoms. I trust in thee and accept my fate as you determine!"</p>
       <button id="randomHeroBtn">Amen</button>
       <h2 id="heroText"></h2>
-      <h3 id="flavorText"></h3>
+      <p id="flavorText"></p>
     </div>
   </div>
 </body>
