--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
   <div class="wrapper">
     <div class="flexWrap">
+      <div>
+        <img src="cookie.jpg" alt="">
+      </div>
       <h1>COOKIE'S RANDOM SIMULATOR</h1>
       <p id="prayer">"Dear Gaben, please bless my randoms. I trust in thee and accept my fate as you determine!"</p>
       <button id="randomHeroBtn">Amen</button>
