--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="wrapper">
     <div class="flexWrap">
       <div>
-        <img src="cookie.jpg" alt="">
+        <img id="image" src="cookie.jpg" alt="">
       </div>
       <h1>COOKIE'S RANDOM SIMULATOR</h1>
       <p id="prayer">"Dear Gaben, please bless my randoms. I trust in thee and accept my fate as you determine!"</p>
