--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1>COOKIE'S RANDOM SIMULATOR</h1>
       <p id="prayer">"Dear Gaben, please bless my randoms. I trust in thee and accept my fate as you determine!"</p>
       <button id="randomHeroBtn">Amen</button>
+      <label><input type="checkbox" name="checkbox" value="Nick" id="nickBox">Nick is randoming!</label>
       <h2 id="heroText"></h2>
       <p id="flavorText"></p>
     </div>
